src/objects/AcctSeed__Billing_Format__c.object
<CustomObject>
    <description>Used to store configuration and default settings related to the pdf generation of a record.</description>
    <fields>
        <fullName>AcctSeed__Automated_Email_Delivery__c</fullName>
        <inlineHelpText>Balance Due - Billing with a balance will have an email sent once the Billing Date is reached.Zero Balance - Billing will have an email sent once its balance reaches zero after the Billing Date.No Delivery - Automated emails not to be sent.</inlineHelpText>
        <label>Automated Email Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Due</fullName>
                </value>
                <value>
                    <fullName>Zero Balance</fullName>
                </value>
                <value>
                    <fullName>No Delivery</fullName>
                    <default>true</default>
                    <label>No Delivery</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_City__c</fullName>
        <defaultValue>$Organization.City</defaultValue>
        <label>Company City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Country__c</fullName>
        <defaultValue>$Organization.Country</defaultValue>
        <label>Company Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Name__c</fullName>
        <defaultValue>$Organization.Name</defaultValue>
        <inlineHelpText>The name of the company as you would like it displayed on the document.</inlineHelpText>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_PostalCode__c</fullName>
        <defaultValue>$Organization.PostalCode</defaultValue>
        <label>Company PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_State__c</fullName>
        <defaultValue>$Organization.State</defaultValue>
        <label>Company State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Street2__c</fullName>
        <defaultValue>$Organization.Street</defaultValue>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Format__c</fullName>
        <inlineHelpText>Overrides the default currency format (corporate currency&apos;s ISO code and 2 decimal places for currency amounts ). For instance, you would enter &apos;US$ 0.000&apos; to format currency amounts as prefixed with US$ and with 3 decimal places.</inlineHelpText>
        <label>Currency Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Custom_Footer_Content__c</fullName>
        <inlineHelpText>Used to display custom footer content on the Billing PDF.</inlineHelpText>
        <label>Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Email_Template__c</fullName>
        <inlineHelpText>This is the email template used when emailing Billing PDF Invoices. Use the Template Unique Name NOT the Template Name when populating this field.</inlineHelpText>
        <label>Default Email Template</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Image__c</fullName>
        <inlineHelpText>This is the image which will display in the right top corner of the PDF.</inlineHelpText>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Numeric_Format__c</fullName>
        <inlineHelpText>Overrides the default numeric format (6 decimal places) for the Quantity field on PDF formats. For instance, you would enter &apos;0.00&apos; to restrict this to 2 decimal places.</inlineHelpText>
        <label>Numeric Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Org_Wide_Email_Address__c</fullName>
        <label>Org-Wide Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcctSeed__ReplyTo_Email__c</fullName>
        <inlineHelpText>Sets the sending email address if the user attempts to reply to the email.</inlineHelpText>
        <label>ReplyTo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sort_Field__c</fullName>
        <inlineHelpText>The API name of the field used to sort the billing lines.</inlineHelpText>
        <label>Sort Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <inlineHelpText>The type of record this PDF format is associated with.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Activity Statement</fullName>
                </value>
                <value>
                    <fullName>Outstanding Statement</fullName>
                </value>
                <value>
                    <fullName>Packing Slip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__VAT_Identification_Number__c</fullName>
        <inlineHelpText>A unique ID provided to businesses when they register for VAT. VAT numbers vary in length depending on issuing country. Country codes, two letters, precede the VAT number for the purposes of intra-community trade.</inlineHelpText>
        <label>VAT Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Visualforce_PDF_Page__c</fullName>
        <inlineHelpText>The API name of the Visualforce page that is used to display the PDF rendition of the Billing.</inlineHelpText>
        <label>Visualforce PDF Page</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PDF Format</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PDF Format Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>